--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ pulldown-cmark = { version = "0.9.2", default-features = false }
 [dev-dependencies]
 serde = { version = "1.0.152", features = ["derive"] }
 toml = "0.5.10"
+
+[workspace]
+members = ["xtask"]
