--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ readme = "./README.md"
 rust-version = "1.58"
 
 [dependencies]
-pulldown-cmark = { version = "0.9.2", default-features = false }
+pulldown-cmark = { version = "0.11.0", default-features = false, features = ["html"] }
 
 [dev-dependencies]
 serde = { version = "1.0.152", features = ["derive"] }
